# qusi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  README.md  conftest.py  cube_database.py  data_cube_downloader.py  data_set_visualizer  development_requirements.txt  infer.py  license  lightcurve_database.py  linux_gpu_prerequisites  losses.py  microlensing_label_per_example_database.py  microlensing_label_per_time_step_database.py  models.py  pyarrow_install_armv8.bash  pyarrow_install_x86.bash  pyproject.toml  pytorch_infer.py  pytorch_train.py  qodana.yaml  quality_control_center.py  requirements.txt  setup.py  test_data_cube_downloader.py  train.py
.github/workflows/: build_and_test.yaml  build_documentation.yaml  build_wheels.yml  main.yaml  tag_version_and_mark_as_github_release.yaml
analysis/: roc_calculator.py
analysis/tests/: test_roc_calculator.py
data/: .template_meta_database.sqlite3  .template_metadatabase.sqlite3
docs/: build.py  conf.py  data_types.rst  development_requirements.txt  index.rst  input_data_types.rst  python_api_for_tess_data.rst  quick-start-tutorial.rst  requirements.txt  tess-data-interface-tutorial.rst
docs/source/: conf.py  index.md  index.rst  reference_index.md  reference_index.rst
examples/: download_spoc_transit_light_curves.py  transit_dataset.py  transit_finite_dataset_test.py  transit_infer.py  transit_infinite_dataset_test.py  transit_light_curve_visualization.py  transit_train.py
microlensing/: moa_data_interface_2M.py  moa_dataset.py  moa_dataset_2M.py  moa_dataset_550.py  moa_infer.py  moa_survey_light_curve_collection_2M.py  moa_train.py  moa_train_2M.py
photometric_database/: cube_database.py  liang_yu_lightcurve_database.py  lightcurve_database.py  lightcurve_label_per_time_step_database.py  microlensing_label_per_example_database.py  microlensing_label_per_time_step_database.py  tess_transit_lightcurve_label_per_time_step_database.py  toi_lightcurve_database.py  yu_lightcurve_database.py
photometric_database/tests/: test_microlensing_label_per_time_step_database.py  test_tess_transit_lightcurve_label_per_time_step_database.py
qusi/: infer_session.py  light_curve.py  light_curve_classification_observation.py  light_curve_collection.py  light_curve_dataset.py  light_curve_transforms.py  single_dense_layer_model.py  toy_light_curve_collection.py  train_run.py  train_session.py
ramjet/: __init__.py  basic_models.py  experiments.py  losses.py  models.py  py_mapper.py  trial.py
ramjet/analysis/: __init__.py  color_palette.py  convert_column_name_to_display_name.py  light_curve_visualizer.py  lightcurve_visualizer.py  lisa_reference_signal_to_noise_ratios.feather  lisa_signal_to_noise_calculator.py  log_cleaner.py  model_loader.py  transit_fitter.py  transit_vetter.py
ramjet/data_interface/: metadatabase.py  moa_data_interface.py  tess_data_interface.py  tess_eclipsing_binary_metadata_manager.py  tess_ffi_data_interface.py  tess_ffi_light_curve_metadata_manager.py  tess_ffi_lightcurve_metadata_manager.py  tess_target_metadata_manager.py  tess_toi_data_interface.py  tess_transit_metadata_manager.py  tess_two_minute_cadence_light_curve_metadata_manager.py  tess_two_minute_cadence_lightcurve_metadata_manager.py  tess_two_minute_cadence_meta_data_manager.py  tess_two_minute_cadence_metadata_manager.py
ramjet/database/: csv_liaison.py  tess_planet_disposition.py  tess_target.py  tess_transit_disposition.py  tess_transiter.py
ramjet/logging/: wandb_logger.py
ramjet/models/: cura.py  eos.py  gml_model.py  hades.py  nyx.py  powell_tess_ffi_resnet.py  single_layer_model.py
ramjet/photometric_database/: cube_database.py  eclipsing_binary_database.py  ffi_microlensing_database.py  ffi_toi_database.py  injected_with_additional_explicit_injected_negative_database.py  injected_with_additional_explicit_negative_database.py  light_curve.py  light_curve_collection.py  light_curve_database.py  lightcurve_collection.py  lightcurve_database.py  lightcurve_label_per_time_step_database.py  microlensing_label_per_example_database.py  microlensing_label_per_time_step_database.py  microlensing_signal_generator.py  new_microlensing_signal_generator.py  py_mapper.py  self_lensing_binary_database.py  sql_metadata_lightcurve_collection.py  standard_and_injected_light_curve_database.py  standard_and_injected_lightcurve_database.py  stars_generator.py  tess_data_interface.py  tess_ffi_light_curve.py  tess_light_curve.py  tess_synthetic_injected_database.py  tess_synthetic_injected_with_negative_injection_database.py  tess_target.py  tess_transit_lightcurve_label_per_time_step_database.py  tess_two_minute_cadence_light_curve.py  toi_database.py  toi_lightcurve_database.py  yu_lightcurve_database.py
scripts/: download_spoc_light_curve.py  download_spoc_transit_light_curves.py  pytorch_train.py  transit_finite_dataset_test.py  transit_infer.py  transit_infinite_dataset_test.py  transit_train.py
src/qusi/: data.py  device.py  finite_standard_light_curve_dataset.py  finite_standard_light_curve_observation_dataset.py  finite_test_session.py  hadryss_model.py  infer_session.py  light_curve.py  light_curve_collection.py  light_curve_dataset.py  light_curve_observation.py  light_curve_transforms.py  logging.py  model.py  session.py  single_dense_layer_model.py  toy_light_curve_collection.py  train_hyperparameter_configuration.py  train_logging_configuration.py  train_session.py  train_system_configuration.py  transform.py  wandb_liaison.py
src/ramjet/: basic_models.py  trial.py
tests/: __init__.py  patch_by_reference.py  picklable_mock.py  test_experiments.py  test_hydryss_model.py  test_light_curve_dataset.py  test_package_import_deprecations.py  test_py_mapper.py  test_train.py  test_utilities.py
tests/analysis/: __init__.py  (+7 more)
(+265 files in other folders)
