[tool.poetry]
name = "astroramjet"
version = "0.7.1"
description = ""
authors = ["Greg Olmschenk <greg@olmschenk.com>"]
readme = "README.md"
packages = [
    {include = "ramjet", from="src"},
    {include = "qusi", from="src"}
]

[tool.poetry.scripts]
ramjet_light_curve_folding_vizualizer = "ramjet.analysis.light_curve_folding_vizualizer.application:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
retrying = "^1.3.4"
tenacity = "^8.1.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
tensorflow = { version = "^2.13.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
tensorflow-macos = { version = "^2.13.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
astropy = "^5.2.1"
astroquery = "^0.4.6"
requests = "^2.28.2"
pytest = "^7.2.1"
pyarrow = "^11.0.0"
sphinx = "^6.1.3"
sphinx-autoapi = "^2.0.1"
sphinx-press-theme = "^0.8.0"
gitpython = "^3.1.30"
matplotlib = "^3.6.3"
pipreqs = "^0.4.11"
bokeh = "^3.0.0"
scipy = "^1.10.0"
setuptools = "^67.1.0"
dataset = "^1.6.0"
pathos = "^0.3.0"
peewee = "^3.15.4"
pytest-asyncio = "^0.20.3"
wandb = "^0.13.9"
plotly = "^5.13.0"
tornado = "^6.2"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
backports-strenum = "^1.1.1"
lightkurve = "^2.3.0"
uvloop = "^0.17.0"
filelock = "^3.9.0"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest-pycharm = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
