[project]
name = "qusi"
dynamic = ["version"]
description = ""
authors = [
    { name = "golmschenk", email = "greg@olmschenk.com" },
]
readme = "README.md"
requires-python = "==3.11.*"
packages = [
    {include = "ramjet", from="src"},
    {include = "qusi", from="src"}
]
dependencies = [
"retrying>=1.3.4",
"tenacity>=8.1.0",
"numpy>=1.24.1",
"pandas>=1.5.3",
"astropy>=5.2.1",
"astroquery>=0.4.6",
"requests>=2.28.2",
"pytest>=7.2.1",
"pyarrow>=11.0.0",
"gitpython>=3.1.30",
"matplotlib>=3.6.3",
"pipreqs>=0.4.11",
"bokeh>=3.0.0",
"scipy>=1.11.0",
"setuptools>=67.1.0",
"peewee>=3.15.4",
"pytest-asyncio>=0.20.3",
"wandb>=0.13.9",
"plotly>=5.13.0",
"tornado>=6.2",
"beautifulsoup4>=4.11.2",
"lxml>=4.9.2",
"lightkurve>=2.3.0",
"uvloop>=0.17.0",
"filelock>=3.9.0",
"torch>=2.0.1",
"torchvision>=0.15.2",
"polars>=0.19.10",
"torchmetrics>=1.2.0",
"stringcase>=1.2.0",
"atpublic>=4.0",
"pytest-pycharm>=0.7.0",
"furo>=2023.9.10",
"sphinx>=6.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/qusi/__about__.py"